Loading plugins from pip packages

--- a/docs/komoe.toml
+++ b/docs/komoe.toml
@@ -1,6 +1,6 @@
 # Configuration for KOMOE static site generator.
 
-komoe_require = '0.0.0'
+komoe_require = '0.2.0'
 
 [project]
 name = 'Komoe'
@@ -12,6 +12,6 @@ static = 'static'
 output = 'build'
 
 [plugin.sass]
-script = "../../komoe_sass/komoe_sass/__init__.py"
+package = "komoe_sass"
 config.path = "style"
 config.command = "sassc {input} {output}"
