--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-click==8.1.3
 Jinja2==3.1.2
-Jinja2-TD==3.1-post2
+Jinja2-TD==3.1.post2
 Markdown==3.4.1
-MarkupSafe==2.1.1
-tomli==2.0.1
-watchfiles==0.18.1
+click~=8.1.3
+tomli~=2.0.1
