--- a/komoe-sass/pyproject.toml
+++ b/komoe-sass/pyproject.toml
@@ -10,6 +10,9 @@ requires-python = ">=3.10"
 dependencies = [
 ]
 
+[project.entry-points.komoe-plugins]
+sass = 'komoe-sass'
+
 [tool.poetry]
 packages = [{include = "komoe_sass", from = "src"}]
 
