added new options to the build command

--- a/docs/komoe.toml
+++ b/docs/komoe.toml
@@ -1,9 +1,7 @@
-# Configuration for KOMOE static site generator.
-
 komoe_require = '==0.5.dev4'
 
 [project]
-title = 'Komoe'
+name = 'Komoe'
 
 [plugin.sass]
 package = "komoe_sass"
